Fix layout on IE

--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -2,6 +2,9 @@
 @import "compass"
 @import "./animation"
 
+*
+  box-sizing: border-box
+
 %clearfix
   &:before,
   &:after
